# security-log-analysis-tool

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  index.html  package-lock.json  package.json  plan-prompt.txt  pyproject.toml  ruff.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: oracle.md  playwright-test-generator.md  playwright-test-healer.md  playwright-test-planner.md
.claude/memory/: MEMORY.md  commit-policy.md  orchestrated-session-protocol.md  plans-include-agentic-tests.md  project-conventions.md
.claude/rules/: dev-workflow.md  git-safety.md  secrets-hygiene.md
.claude/scripts/: README.md  capture-session-start.ps1  check-transcript-stop.ps1  cleanup-plan-worktrees.ps1  complete-session.ps1  notify-desktop.ps1  orchestration-status.ps1  register-transcript-hooks.ps1  resume-session.ps1  spawn-plan-sessions.ps1  spawn-session-tab.ps1  verify-session-boot.ps1
config/: rules.yaml
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
docs/: e2e-report.md  manual-tests.md  orchestration-workflow.md
export/: influxDbData.txt  prometheusData.txt
features/: auth.feature  correlation.feature  detection.feature  environment.py  export.feature  queue.feature  smoke.feature
history/: duration-trend.json  history-trend.json  history.json  retry-trend.json
session-logs/: 1-seed-workspace-session.txt  3p-logwarden-session-3-final.txt  5s-logwarden-session-5-final.txt  6p-logwarden-session-6-final.txt  7s-logwarden-session-7-final.txt  logwarden-master-plan-final.txt  logwarden-master-plan.txt
tests/: test_smoke.py
widgets/: behaviors.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
(+544 files in other folders)
