[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-log-analysis-tool"
version = "0.1.0"
description = "TODO: describe security-log-analysis-tool."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8", "pre-commit>=3.5"]

[project.scripts]
security-log-analysis-tool = "security_log_analysis_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
